@@ -1,4 +1,7 @@
 
+2009-04-05 19:40 Ali aliov@xfce.org 
+	 * : Fix bug: 5193, the help document in the settings dialog
+
 2009-04-04 13:58 Ali aliov@xfce.org 
 	 * : Alpha2 release
 
